--- a/color.html
+++ b/color.html
@@ -201,10 +201,13 @@
 
 				<section>
 				<h1>Possible Areas of Future Research</h1>
+				</section>
+				<section>
 				<ul>
 					<li>What if more than 22 colors are needed?</li>
 					<li>Alter/Generate Kelly's colors based on inputs (for example, common colors in base map.</li>
 					<li>Pattern recognition's effects on contrast/visibility</li>
+					<li>Extensive testing of Kelly's colors against a variety of basemaps</li>
 				</ul>
 				</section>
 
