--- a/color.html
+++ b/color.html
@@ -168,6 +168,7 @@
 					<li>Alter/Generate Kelly's colors based on inputs (for example, common colors in base map.</li>
 					<li>Pattern recognition's effects on contrast/visibility</li>
 					<li>Extensive testing of Kelly's colors against a variety of basemaps</li>
+					<li>Adjusting colors for aesthetic goals</li>
 				</ul>
 				</section>
 
