--- a/color.html
+++ b/color.html
@@ -39,6 +39,20 @@
 			[data-background-hash*="color_alg"] {
 				background-position: center top;
 			}
+    .blink {
+      animation: blink 1.2s steps(4, start) infinite;
+      -webkit-animation: blink 1.22s steps(4, start) infinite;
+    }
+    @keyframes blink {
+      to {
+        visibility: hidden;
+      }
+    }
+    @-webkit-keyframes blink {
+      to {
+        visibility: hidden;
+      }
+    }
 		</style>
 	</head>
 
@@ -196,6 +210,10 @@
 					<li>Extensive testing of Kelly's colors against a variety of basemaps</li>
 					<li>Adjusting colors for aesthetic goals</li>
 				</ul>
+				</section>
+
+				<section>
+				<h1 style="color: hotPink; font-weight: 300; text-shadow: 0px 0px 28px rgba(255, 200, 200, 1);" class="blink">APPLAUSE</h1>
 				</section>
 
 				<section>
